Minor refactoring, however, tests are broken and part 2 runs out of memory using JDK 19 ... so, still some work to do.